# RAGnarok-AI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-ADAPTERS.md  CONTRIBUTING.md  Dockerfile  LICENSE-COMMERCIAL.md  NOTICE  README.md  SECURITY.md  STABILITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  feedback.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
benchmarks/: README.md  run_benchmarks.py
benchmarks/configs/: large.yaml  medium.yaml  small.yaml
benchmarks/results/: 2026-02-13.json
docs/: PLUGINS.md  index.md
docs/api/: adapters.md  evaluators.md  types.md
docs/ci-cd/: cli-reference.md  github-action.md
docs/deployment/: air-gapped.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/user-guide/: benchmarking.md  evaluation.md  judge.md  monitoring.md
examples/: custom_rag_adapter.py  medical_abbreviation_example.py  quickstart_notebook.ipynb
helm/ragnarok-ai/: Chart.yaml  README.md  values.yaml
helm/ragnarok-ai/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  job.yaml  pvc.yaml  serviceaccount.yaml
src/ragnarok_ai/: __init__.py  privacy.py
src/ragnarok_ai/adapters/: __init__.py
src/ragnarok_ai/adapters/agents/: __init__.py  cot.py  react.py
src/ragnarok_ai/adapters/frameworks/: __init__.py  dspy.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  semantic_kernel.py
src/ragnarok_ai/adapters/llm/: __init__.py  anthropic.py  groq.py  mistral.py  ollama.py  openai.py  together.py  vllm.py
src/ragnarok_ai/adapters/vectorstore/: __init__.py  chroma.py  faiss.py  milvus.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
src/ragnarok_ai/agents/: __init__.py  protocols.py  types.py
src/ragnarok_ai/agents/analysis/: __init__.py  analyzer.py  visualizer.py
src/ragnarok_ai/agents/evaluators/: __init__.py  reasoning.py  tool_correctness.py
src/ragnarok_ai/alerts/: __init__.py  manager.py  protocols.py  rules.py
src/ragnarok_ai/alerts/adapters/: __init__.py  slack.py  webhook.py
src/ragnarok_ai/baselines/: __init__.py  comparison.py  configs.py  results.py
src/ragnarok_ai/benchmarks/: __init__.py  history.py  models.py
src/ragnarok_ai/benchmarks/storage/: __init__.py  base.py  json_store.py
src/ragnarok_ai/cache/: __init__.py  base.py  disk.py  memory.py
src/ragnarok_ai/cli/: __init__.py  main.py
src/ragnarok_ai/core/: __init__.py  artifacts.py  batch.py  checkpoint.py  compare.py  config.py  evaluate.py  exceptions.py  gating.py  hashing.py  protocols.py  types.py
src/ragnarok_ai/cost/: __init__.py  pricing.py  tokenizer.py  tracker.py
src/ragnarok_ai/data/: __init__.py  novatech_dataset.json
src/ragnarok_ai/dataset/: __init__.py  diff.py  io.py  models.py
src/ragnarok_ai/diff/: __init__.py  generator.py  models.py
src/ragnarok_ai/evaluators/: __init__.py  faithfulness.py  hallucination.py  judge.py  relevance.py  retrieval.py
src/ragnarok_ai/evaluators/medical/: __init__.py  abbreviations.py  medical_normalizer.py
src/ragnarok_ai/generators/: __init__.py  adversarial.py  base.py  golden.py  io.py  models.py  multihop.py  parsing.py  prompts.py  synthetic.py  validators.py
src/ragnarok_ai/loaders/: __init__.py  forge_bundle.py
src/ragnarok_ai/monitor/: __init__.py  client.py  daemon.py  metrics.py  models.py  store.py
src/ragnarok_ai/notebook/: __init__.py  display.py
src/ragnarok_ai/plugins/: __init__.py  discovery.py  exceptions.py  registry.py
src/ragnarok_ai/regression/: __init__.py  detector.py  models.py
src/ragnarok_ai/reporters/: __init__.py  console.py  html.py  json.py
src/ragnarok_ai/telemetry/: __init__.py  exporters.py  tracer.py
tests/: __init__.py  conftest.py
tests/e2e/: test_cli_workflow.py  test_install.py
tests/e2e_plugin/: pyproject.toml
tests/e2e_plugin/src/ragnarok_ai_mock/: __init__.py
tests/unit/: __init__.py  test_adversarial.py  test_anthropic.py  test_baselines.py  test_cache.py  test_checkpoint.py  test_chroma.py  test_cli.py  test_compare.py  test_console_reporter.py  test_data.py  test_dspy.py  test_evaluate.py  test_faiss.py  test_forge_loader.py  test_generators.py  test_groq.py  test_hallucination.py  test_html_reporter.py  test_is_local.py  test_json_reporter.py  test_judge.py  test_langchain.py  test_llamaindex.py  test_milvus.py  test_mistral.py  test_ollama.py  test_openai.py  test_pinecone.py  test_privacy.py  test_qdrant.py  test_retrieval.py  test_telemetry.py  test_together.py  test_trajectory_analysis.py  test_vllm.py
tests/unit/adapters/agents/: test_agents_types.py  test_react_cot_adapters.py  test_tool_correctness.py
tests/unit/adapters/frameworks/: test_dspy.py  test_haystack.py  test_langgraph.py  test_llamaindex.py  test_semantic_kernel.py
tests/unit/adapters/llm/: test_anthropic.py  test_groq.py  test_mistral.py  test_ollama.py  test_openai.py
tests/unit/alerts/: test_manager.py  test_protocols.py  test_rules.py
tests/unit/alerts/adapters/: __init__.py  (+2 more)
tests/unit/benchmarks/: test_benchmarks.py
tests/unit/cli/: test_cli.py  test_main.py
tests/unit/core/: test_artifacts.py  test_batch.py  test_cache.py  test_types.py
tests/unit/cost/: __init__.py  test_pricing.py  test_tokenizer.py  test_tracker.py
tests/unit/dataset/: test_diff.py  test_io.py
tests/unit/evaluators/: test_faithfulness.py  test_gating.py  test_judge.py  test_medical_normalizer.py  test_reasoning_evaluators.py  test_relevance.py
tests/unit/generators/: test_generators.py  test_golden.py  test_multihop.py  test_parsing.py
tests/unit/monitor/: test_client.py  test_daemon.py  test_metrics.py  test_models.py  test_store.py
tests/unit/notebook/: __init__.py  test_display.py
tests/unit/plugins/: test_discovery.py  test_plugins.py
tests/unit/regression/: test_diff.py  test_regression.py
tests/unit/reporters/: test_console_reporter.py
(+6 files in other folders)
