[project]
name = "ragnarok-ai-mock"
version = "0.1.0"
description = "Mock plugin for testing RAGnarok-AI plugin system"
requires-python = ">=3.10"

[project.entry-points."ragnarok_ai.adapters.llm"]
mock = "ragnarok_ai_mock:MockLLM"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragnarok_ai_mock"]
